Actions
Bug #12562
closedsu: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors with NUL pointer:
../../sun4/io/su_driver.c: In function 'asyattach': ../../sun4/io/su_driver.c:712: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun4/io/su_driver.c:735: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun4/io/su_driver.c:753: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun4/io/su_driver.c:800: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun4/io/su_driver.c:807: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *'
Testing done: build/install/boot
Related issues
Updated by Toomas Soome almost 2 years ago
- Related to Bug #12814: CCVERBOSE flag in CFLAGS is redundant and not needed added
Updated by Electric Monk almost 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 574493ffa2fa0218f9104c9978be64dd2d4f4b37
commit 574493ffa2fa0218f9104c9978be64dd2d4f4b37 Author: Toomas Soome <tsoome@me.com> Date: 2020-06-05T20:32:12.000Z 12562 su: NULL pointer errors Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions