12562 su: NULL pointer errors Reviewed by: Yuri Pankov <ypankov@tintri.com> Reviewed by: Gergő Mihály Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>